3.8.1:

2013-04-29  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	Gtk::Widget: Don't call signal_hide handlers on a widget being deleted.

	* gtk/src/widget.[hg|ccg]: Add custom C callbacks for signal_hide. Don't
	call signal_hide handlers or an on_hide() override on a widget while it is
	being deleted. This requires the latest glibmm from git master, where a bug
	in _WRAP_SIGNAL(..., custom_c_callback) has been fixed. Bug #605728.

3.8.0:

2013-04-05  Murray Cumming  <murrayc@murrayc.com>

	Widget: Add some new methods.

	* gtk/src/widget.hg: Add is_visible(),
	register_window() and unregister_window().

2013-04-03  Murray Cumming  <murrayc@murrayc.com>

	Update the generated GTK+ documentation.
	
	* gtk/src/gtk_docs.xml: Regenerate.

2013-04-01  Murray Cumming  <murrayc@murrayc.com>

	Gtk::IconInfo: Add async methods.
	
	* gtk/src/iconinfo.hg: Add load_icon_async(),
	load_symbolic_async(), load_symbolic_for_context().
	* tools/m4/convert_gtk.m4: Add a conversion for 
	AsyncResult.

2013-04-01  Murray Cumming  <murrayc@murrayc.com>

	Gtk::Settings: Add two new settings.
	
	* gtk/src/settings.hg: Wrap the new
	gtk-recent-files-enabled and gtk-primary-button-warps-slider
	properties.

2013-04-01  Murray Cumming  <murrayc@murrayc.com>

	Gtk::Image: Add the resource property.
	
	* gtk/src/image.hg: Wrap the new
	resource property.

2013-04-01  Murray Cumming  <murrayc@murrayc.com>

	Gtk::TreeView: Add get/set_activate_on_single_click().
	
	* gtk/src/treeview.hg: Wrap the new
	gtk_tree_view_set_activate_on_single_click() and
	gtk_tree_view_get_activate_on_single_click() functions
	and the activate-on-single-click property.

2013-04-01  Murray Cumming  <murrayc@murrayc.com>

	Gtk::MenuShell: Add bind_model().
	
	* gtk/src/textview: Wrap the new
	gtk_menu_shell_bind_model() function.

2013-04-01  Murray Cumming  <murrayc@murrayc.com>

	Gtk::TextView: Add the populate_all property.
	
	* gtk/src/textview: Wrap the new
	populate-all property.
