@@ -1,4 +1,14 @@
+<<<<<<< HEAD
 3.8.1:
+=======
+2013-05-07  Murray Cumming  <murrayc@murray.com>
+
+	Fix the build with --enable-warnings=fatal, partly.
+
+	* tools/extra_defs_gen/generate_defs_gtk.cc: Add a define of
+	GDK_DISABLE_DEPRECATION_WARNINGS, though I do not know why this is only
+	necessary now, using GTK+ from git master.
+>>>>>>> parent of 284d17e... Fix the build with --enable-warnings=fatal
 
 2013-04-29  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>
 
